--- a/Content.Microservice.API/Content.Microservice.Infrastructure/Content.Microservice.Infrastructure.csproj
+++ b/Content.Microservice.API/Content.Microservice.Infrastructure/Content.Microservice.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Content.Microservice.Domain\Content.Microservice.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
