--- a/Content.Microservice.API/Content.Microservice.API/appsettings.json
+++ b/Content.Microservice.API/Content.Microservice.API/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=DESKTOP-E3ES6ME;Database=ContentMicroserviceDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "AWS": {
+    "Region": "",
+    "AccessKey": "",
+    "SecretKey": ""
   }
 }
