--- a/Content.Microservice.API/Content.Microservice.AppCore/Content.Microservice.AppCore.csproj
+++ b/Content.Microservice.API/Content.Microservice.AppCore/Content.Microservice.AppCore.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Content.Microservice.Domain\Content.Microservice.Domain.csproj" />
   </ItemGroup>
 
 </Project>
